segunda prueba con GIT HUB

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
 <body>
     <div>
         <p>Hola mundo</p>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quasi omnis suscipit cumque ad! Obcaecati fugiat autem, eveniet ad facere optio esse quisquam cum provident cumque molestiae dolore sit consequatur!</p>
+        </article>
     </div>
 </body>
 </html>
